<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/keyguard_text_color_normal"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/pg"
        >

        <LinearLayout
            android:id="@+id/top_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="90dp"
            android:layout_marginRight="90dp"

            android:orientation="horizontal">

            <TextView
                android:id="@+id/home_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/home_title"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="62sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="90dp"
            android:orientation="horizontal">

            <TextView
                    android:id="@+id/warehouse_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/warehouse_name"
                    android:textColor="@color/white"
                    android:textSize="34sp"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/table_name"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="90dp"
            android:gravity="center"
            android:background="@drawable/view_line"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/title_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/title_time"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="27sp" />

            <TextView
                android:id="@+id/title_epc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/title_epc"
                android:textStyle="bold"
                android:textSize="27sp" />

            <TextView
                android:id="@+id/title_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/black"
                android:text="@string/table_name"
                android:textStyle="bold"
                android:textSize="27sp" />

            <TextView
                android:id="@+id/title_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/black"
                android:gravity="center"
                android:text="@string/title_status"
                android:textStyle="bold"
                android:textSize="27sp" />
        </LinearLayout>

        <View
            android:id="@+id/view2"
            android:layout_width="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="90dp"
            android:background="#EFF1F5"
            android:layout_height="3dp" />

        <LinearLayout
            android:id="@+id/list_layout"
            android:layout_width="match_parent"
            android:layout_height="552dp"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="90dp"
            android:background="@drawable/first_list"

            android:orientation="horizontal">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/home_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="528dp"
                android:scrollbarSize="10dp"
                android:scrollbars="vertical">

            </androidx.recyclerview.widget.RecyclerView>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/number_layout"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="90dp"
            android:background="@drawable/view_number"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/bottom_count1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/black"
                android:layout_marginLeft="130dp"
                android:text="@string/bottom_count1"
                android:textSize="35sp" />

            <TextView
                android:id="@+id/bottom_count2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/bottom_count2"
                android:textColor="@color/Red"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/bottom_count3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:textColor="@color/black"
                android:layout_marginRight="130dp"
                android:text="@string/bottom_count3"
                android:textSize="35sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="90dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="90dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button"
                android:layout_width="300dp"
                android:layout_height="80dp"
                android:background="@drawable/view_button"
                android:text="@string/bottom_button"
                android:textColor="@color/white"
                android:textSize="30sp" />

        </LinearLayout>

    </LinearLayout>

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gif"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:background="@drawable/running"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

    </pl.droidsonroids.gif.GifImageView>

</androidx.constraintlayout.widget.ConstraintLayout>


